--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ endif()
 set(SOURCE_FILES "src/main.cpp")
 set(SOURCE_FILES ${SOURCE_FILES} "src/image.cpp")
 set(SOURCE_FILES ${SOURCE_FILES} "src/raytraceKernel.cu")
-set(SOURCE_FILES $(SOURCE_FILES} "src/scene.cpp")
+set(SOURCE_FILES ${SOURCE_FILES} "src/scene.cpp")
 set(SOURCE_FILES ${SOURCE_FILES} "src/utilities.cpp")
 set(SOURCE_FILES ${SOURCE_FILES} "${EXTERNAL}/src/glslUtil/glslUtility.cpp")
 set(SOURCE_FILES ${SOURCE_FILES} "${EXTERNAL}/src/stb_image/stb_image.c")
