Finish diffuse and specular
Finish diffuse and specular

--- a/windows/Project3-Pathtracer/Project3-Pathtracer/Project3-Pathtracer.vcxproj
+++ b/windows/Project3-Pathtracer/Project3-Pathtracer/Project3-Pathtracer.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="..\..\..\src\main.cpp" />
     <ClCompile Include="..\..\..\src\scene.cpp" />
     <ClCompile Include="..\..\..\src\utilities.cpp" />
+    <ClCompile Include="temp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="..\..\..\src\raytraceKernel.cu">
