--- a/windows/Project3-Pathtracer/Project3-Pathtracer/Project3-Pathtracer.vcxproj
+++ b/windows/Project3-Pathtracer/Project3-Pathtracer/Project3-Pathtracer.vcxproj
@@ -80,6 +80,7 @@
     <ClInclude Include="..\..\..\src\utilities.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\external\include\BMP\EasyBMP.cpp" />
     <ClCompile Include="..\..\..\external\src\glslUtil\glslUtility.cpp" />
     <ClCompile Include="..\..\..\external\src\stb_image\stb_image.c" />
     <ClCompile Include="..\..\..\external\src\stb_image\stb_image_write.c" />
